[package]
name = "asynchelp-macros"
description = "Proc macros for asynchelp"

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
stackfuture = []
tarpc = []

[lib]
proc-macro = true
